--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="container main-header__container">
             <div class="main-header__logo-wrap">
                 <div class="main-header__logo-slogan main-header__logo-slogan_left"><span class="green">мое порт</span></div>
-                <a href="/" class="main-header__logo">
+                <a href="#home" class="main-header__logo">
                     <img class="main-header__logo-icon" src="images/logo-icon.png">
                 </a>
                 <div class="main-header__logo-slogan"><span class="green">olio</span></div>
@@ -69,6 +69,9 @@
                     </a>
                     <a href="https://vk.com/id241539225"  target="_blank" class="social-media__item social-media__item_vk">
                         <i class="fab fa-vk"></i>
+                    </a>
+                    <a href="https://web.telegram.org/#/im?p=@zylog"  target="_blank" class="social-media__item social-media__item_telegram">
+                        <i class="fab fa-telegram-plane"></i>
                     </a>
                 </div>
             </div>
@@ -340,7 +343,7 @@
     <div class="container my-portfolio__container">
         <h2>Портfolio</h2>
         <div class="my-portfolio__description">
-            <p>Здесь работы, которые я сверстал в свободное время. Dерстаю, все, что доступно и бесплатно для скачивания.</p>
+            <p>Здесь работы, которые я сверстал в свободное время. Верстаю бесплатные psd шаблоны, которые доступны в сети, а также подписан на рыссылки некоторых онлайн-курсов верстки и прочего програмирования, которые присылают psd-макеты для прокачивания навыков своим подписчикам.</p>
         </div>
         <ul class="my-portfolio__works-menu" id="filter">
             <li class="my-portfolio__works-menu-item">
@@ -623,6 +626,9 @@
                 </a>
                 <a href="https://vk.com/id241539225"  target="_blank" class="social-media__item social-media__item_vk">
                     <i class="fab fa-vk"></i>
+                </a>
+                <a href="https://web.telegram.org/#/im?p=@zylog"  target="_blank" class="social-media__item social-media__item_telegram">
+                    <i class="fab fa-telegram-plane"></i>
                 </a>
             </div>
         </div>
