--- a/index.html
+++ b/index.html
@@ -560,6 +560,23 @@
                         <p><span class="strong">Сборка проекта:</span> webpack.</p>
                     </div>
                 </li>
+                <li class="my-portfolio__work webpack">
+                    <div class="my-portfolio__work-visible">
+                        <img src="images/closes366x300.png" alt="" class="my-portfolio__work-img">
+                    </div>
+                    <div class="my-portfolio__work-hidden">
+                        <p class="my-portfolio__work-title">Сайт "Ателье одежды для мам и дочек"</p>
+                        <p class="my-portfolio__work-link">
+                            <a href="https://leonziger.github.io/closes-studio/" target="_blank">веб-ресурс</a>
+                        </p>
+                        <p class="my-portfolio__work-link">
+                            <a href="https://github.com/leonziger/closes-studio" target="_blank">код на гитхабе</a>
+                        </p>
+                        <p><span class="strong">Кодинг/разметка:</span> HTML+SCSS.</p>
+                        <p><span class="strong">Плагины/библиотеки:</span> jQuery, Vue.js, Bootstrap3, fullPage.js.</p>
+                        <p><span class="strong">Сборка проекта:</span> webpack.</p>
+                    </div>
+                </li>
             </ul>
         </div>
     </div>
