--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
     <div class="container my-portfolio__container">
         <h2>Портfolio</h2>
         <div class="my-portfolio__description">
-            <p>Здесь работы, которые я сверстал в свободное время. Верстаю бесплатные psd шаблоны, которые доступны в сети, а также подписан на рыссылки некоторых онлайн-курсов верстки и прочего програмирования, которые присылают psd-макеты для прокачивания навыков своим подписчикам.</p>
+            <p>Здесь работы, которые я сверстал в свободное время. Верстаю бесплатные psd шаблоны, которые доступны в сети, а также подписан на рыссылки некоторых онлайн-курсов верстки, которые присылают psd-макеты своим подписчикам, для прокачивания навыков.</p>
         </div>
         <ul class="my-portfolio__works-menu" id="filter">
             <li class="my-portfolio__works-menu-item">
@@ -514,7 +514,7 @@
                         <img src="images/folio366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
                     <div class="my-portfolio__work-hidden">
-                        <p class="my-portfolio__work-title">Лендинг портфолио веб-разработчика</p>
+                        <p class="my-portfolio__work-title">Мое портфолио</p>
                         <p class="my-portfolio__work-link">
                             <a href="https://leonziger.github.io/folio/" target="_blank">веб-ресурс</a>
                         </p>
@@ -522,7 +522,7 @@
                             <a href="https://github.com/leonziger/folio" target="_blank">код на гитхабе</a>
                         </p>
                         <p><span class="strong">Кодинг/разметка:</span> HTML+SCSS.</p>
-                        <p><span class="strong">Плагины/библиотеки:</span> jQuery,  vanilla-text-mask, jquery.maskedinput, jquery-validation, slick-carousel, vex-js.</p>
+                        <p><span class="strong">Плагины/библиотеки:</span> jQuery,  vanilla-text-mask, jquery.maskedinput, jquery-validation, jQuery Form Styler, slick-carousel, vex-js.</p>
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
@@ -560,7 +560,7 @@
                         <p><span class="strong">Сборка проекта:</span> webpack.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work webpack">
+                <li class="my-portfolio__work">
                     <div class="my-portfolio__work-visible">
                         <img src="images/closes366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -577,6 +577,23 @@
                         <p><span class="strong">Сборка проекта:</span> webpack.</p>
                     </div>
                 </li>
+                <li class="my-portfolio__work">
+                    <div class="my-portfolio__work-visible">
+                        <img src="images/belaz366x300.png" alt="" class="my-portfolio__work-img">
+                    </div>
+                    <div class="my-portfolio__work-hidden">
+                        <p class="my-portfolio__work-title">Сайт "Запчасти для грузовиков Белаз"</p>
+                        <p class="my-portfolio__work-link">
+                            <a href="https://leonziger.github.io/belaz-trucks/" target="_blank">веб-ресурс</a>
+                        </p>
+                        <p class="my-portfolio__work-link">
+                            <a href="https://github.com/leonziger/belaz-trucks" target="_blank">код на гитхабе</a>
+                        </p>
+                        <p><span class="strong">Кодинг/разметка:</span> HTML+SCSS.</p>
+                        <p><span class="strong">Плагины/библиотеки:</span> jQuery, Bootstrap3, jquery.maskedinput, jquery-validation, vex-js.</p>
+                        <p><span class="strong">Сборка проекта:</span> gulp.</p>
+                    </div>
+                </li>
             </ul>
         </div>
     </div>
@@ -587,17 +604,13 @@
     <div class="container contact-me__container">
         <div class="contact-me__left">
             <div class="contact-me__description">
-                <p>Если у вас есть идеи и предложения, которые очень хочется обсудить, вы можете позвонить мне по телефону или написать на email.</p>
-                <!--<p>122 33rd Street East<br>-->
-                    <!--Saskatoon, SK<br>-->
-                    <!--S7K 1R9-->
-                <!--</p>-->
+                <p>Если у вас есть идеи и предложения, которые очень хочется обсудить, воспользуйтесь контактной формой.</p>
                 <ul class="contact-me__items">
                     <li class="contact-me__item">
-                        <div class="contact-me__item-name">Email:</div><div class="contact-me__item-value">infor@focal.com</div>
+                        <div class="contact-me__item-name">Сайт:</div><a class="contact-me__item-value" href="https://leonziger.github.io/folio/" target="_blank">https://leonziger.github.io/folio/</a>
                     </li>
                     <li class="contact-me__item">
-                        <div class="contact-me__item-name">Телефон:</div><div class="contact-me__item-value">+38-050-868-7240</div>
+                        <div class="contact-me__item-name">Github:</div><a class="contact-me__item-value" href="https://github.com/leonziger/" target="_blank">https://github.com/leonziger/</a>
                     </li>
                 </ul>
             </div>
