--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                 <h1 class="main-header__site-headline">Портфолио веб-разработчика Леонида Зычкова: верстка, натяжка на Вордпресс, разработка js/jQuery скриптов</h1>
             </div>
             <nav class="main-header__nav">
-                <a href="#home" class="main-header__nav-link">Главная</a>
+                <a href="#home" class="main-header__nav-link" style="display: none">Главная</a>
                 <a href="#about-me" class="main-header__nav-link">Обо мне</a>
                 <a href="#skills" class="main-header__nav-link">Навыки</a>
-                <a href="#resume" class="main-header__nav-link">Резюме</a>
-                <a href="#testimonials" class="main-header__nav-link">Отзывы</a>
+                <a href="#resume" class="main-header__nav-link" style="display: none">Резюме</a>
+                <a href="#testimonials" class="main-header__nav-link" style="display: none">Отзывы</a>
                 <a href="#portfolio" class="main-header__nav-link">Портfolio</a>
                 <a href="#contact-me" class="main-header__nav-link">Контакты</a>
             </nav>        <div class="main-header__social-media">
@@ -104,7 +104,7 @@
         <div class="about-me__right">
             <div class="title about-me__headline">Обо мне</div>
             <div class="about-me__description">
-                <p>Всем привет. Меня зовут Леонид. Я - начинающий веб-разработчик.</p>
+                <p>Всем привет. Меня зовут Леонид. Я - веб-разработчик.</p>
                 <p>Мою деятельность можно разделить на такие направления.</p>
             </div>
             <ul class="about-me__vantages">
@@ -119,7 +119,7 @@
                     <img src="images/me2.png" alt="" class="about-me__vantage-icon">
                     <div class="about-me__vantage-text">
                         <div class="about-me__vantage-title">js/Jquery</div>
-                        <div class="about-me__vantage-description">Интегрирую на сайт популярные плагины или напишу несложные скрипты.</div>
+                        <div class="about-me__vantage-description">Интегрирую на сайт популярные плагины или пишу несложные скрипты.</div>
                     </div>
                 </li>
                 <li class="about-me__vantage">
@@ -133,14 +133,14 @@
                     <img src="images/me4.png" alt="" class="about-me__vantage-icon">
                     <div class="about-me__vantage-text">
                         <div class="about-me__vantage-title">Wordpress</div>
-                        <div class="about-me__vantage-description">Превращу html-верстку в Wordpress-тему. Внесу данные через плагин ACF.</div>
+                        <div class="about-me__vantage-description">Превращаю html-верстку в Wordpress-тему. Вношу данные через плагин ACF.</div>
                     </div>
                 </li>
             </ul>
         </div>
     </div>
-</section><section class="my-skills" id="skills">
-    <div class="container my-skills__container">
+</section><section class="my-skills " id="skills">
+    <div class="container my-skills__container my-skills__delimiter">
         <div class="my-skills__left my-skills__left-correction">
             <h2 class="my-skills__headline">Мои навыки</h2>
             <ul class="my-skills__list">
@@ -208,7 +208,7 @@
             <div class="my-skills__right">
                 <ul class="my-work__jobs">
                     <li class="my-work__job">
-                        <div class="my-work__job-title">Сертификат об окончании курсов javascript</div>
+                        <div class="my-work__job-title">Курсы javascript</div>
                         <div class="my-work__job-wrap">
                             <div class="my-work__job-company">easycode.com.ua</div>,&nbsp;
                             <div class="my-work__job-town">онлайн</div>&nbsp;/&nbsp;
@@ -221,7 +221,7 @@
                         </div>
                     </li>
                     <li class="my-work__job">
-                        <div class="my-work__job-title">Сертификат об окончании курсов верстки</div>
+                        <div class="my-work__job-title">Курсы верстки 2.0</div>
                         <div class="my-work__job-wrap">
                             <div class="my-work__job-company">Курсы верстки</div>,&nbsp;
                             <div class="my-work__job-town">онлайн</div>&nbsp;/&nbsp;
@@ -234,7 +234,7 @@
                         </div>
                     </li>
                     <li class="my-work__job">
-                        <div class="my-work__job-title">Диплом преподавателя физики-информатики</div>
+                        <div class="my-work__job-title">Преподавание физики-информатики</div>
                         <div class="my-work__job-wrap">
                             <div class="my-work__job-company">ХГПИ</div>,&nbsp;
                             <div class="my-work__job-town">Херсон</div>&nbsp;/&nbsp;
@@ -251,7 +251,7 @@
         </div>
     </div>
     <div class="my-work">
-        <div class="container my-skills__container">
+        <div class="container my-skills__container my-skills__delimiter">
             <div class="my-skills__left">
                 <h2 class="my-skills__headline">Опыт работы</h2>
                 <div class="my-skills__description">
