--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                 <a href="#home" class="main-header__nav-link" style="display: none">Главная</a>
                 <a href="#about-me" class="main-header__nav-link">Обо мне</a>
                 <a href="#skills" class="main-header__nav-link">Навыки</a>
+                <a href="#education" class="main-header__nav-link">Образование</a>
+                <a href="#companies" class="main-header__nav-link">Опыт работы</a>
                 <a href="#resume" class="main-header__nav-link" style="display: none">Резюме</a>
                 <a href="#testimonials" class="main-header__nav-link" style="display: none">Отзывы</a>
                 <a href="#portfolio" class="main-header__nav-link">Портfolio</a>
@@ -196,7 +198,7 @@
             <a href="#" class="button my-resume__button">Скачать резюме</a>
         </div>
     </div>
-    <div class="my-edu">
+    <div class="my-edu" id="education">
         <div class="container my-skills__container my-skills__delimiter">
             <div class="my-skills__left">
                 <h2 class="my-skills__headline">Мое образование</h2>
@@ -250,7 +252,7 @@
             </div>
         </div>
     </div>
-    <div class="my-work">
+    <div class="my-work" id="companies">
         <div class="container my-skills__container my-skills__delimiter">
             <div class="my-skills__left">
                 <h2 class="my-skills__headline">Опыт работы</h2>
