--- a/index.html
+++ b/index.html
@@ -596,6 +596,23 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
+                <li class="my-portfolio__work">
+                    <div class="my-portfolio__work-visible">
+                        <img src="images/rest366x300.png" alt="" class="my-portfolio__work-img">
+                    </div>
+                    <div class="my-portfolio__work-hidden">
+                        <p class="my-portfolio__work-title">Детский отдых с турагентством "7 континентов"</p>
+                        <p class="my-portfolio__work-link">
+                            <a href="https://leonziger.github.io/children-rest/" target="_blank">веб-ресурс</a>
+                        </p>
+                        <p class="my-portfolio__work-link">
+                            <a href="https://github.com/leonziger/children-rest" target="_blank">код на гитхабе</a>
+                        </p>
+                        <p><span class="strong">Кодинг/разметка:</span> HTML+SCSS.</p>
+                        <p><span class="strong">Плагины/библиотеки:</span> jQuery, Bootstrap4, jquery.maskedinput, jquery-validation.</p>
+                        <p><span class="strong">Сборка проекта:</span> gulp.</p>
+                    </div>
+                </li>
             </ul>
         </div>
     </div>
