--- a/index.html
+++ b/index.html
@@ -613,6 +613,23 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
+                <li class="my-portfolio__work">
+                    <div class="my-portfolio__work-visible">
+                        <img src="images/myresume366x300.png" alt="" class="my-portfolio__work-img">
+                    </div>
+                    <div class="my-portfolio__work-hidden">
+                        <p class="my-portfolio__work-title">Еще одна версия резюме</p>
+                        <p class="my-portfolio__work-link">
+                            <a href="https://leonziger.github.io/my-resume/" target="_blank">веб-ресурс</a>
+                        </p>
+                        <p class="my-portfolio__work-link">
+                            <a href="https://github.com/leonziger/my-resume" target="_blank">код на гитхабе</a>
+                        </p>
+                        <p><span class="strong">Кодинг/разметка:</span> HTML+SCSS.</p>
+                        <p><span class="strong">Плагины/библиотеки:</span> noUiSlider.</p>
+                        <p><span class="strong">Сборка проекта:</span> gulp.</p>
+                    </div>
+                </li>
             </ul>
         </div>
     </div>
