--- a/index.html
+++ b/index.html
@@ -348,22 +348,10 @@
             <p>Верстаю psd шаблоны, которые доступны в сети или приходят в рассылках различных курсов и тренингов.</p>
         </div>
         <ul class="my-portfolio__works-menu" id="filter">
-            <li class="my-portfolio__works-menu-item">
-                <a href="" data-filter="*" class="my-portfolio__works-menu-link current-link">All works</a>
-            </li>
-            <li class="my-portfolio__works-menu-item">
-                <a href="" data-filter=".pug" class="my-portfolio__works-menu-link">pug</a>
-            </li>
-            <li class="my-portfolio__works-menu-item">
-                <a href="" data-filter=".gulp" class="my-portfolio__works-menu-link">gulp</a>
-            </li>
-            <li class="my-portfolio__works-menu-item">
-                <a href="" data-filter=".webpack" class="my-portfolio__works-menu-link">webpack</a>
-            </li>
         </ul>
         <div class="my-portfolio__works-wrapper">
-            <ul class="my-portfolio__works">
-                <li class="my-portfolio__work">
+            <ul class="my-portfolio__works" id="portfolio-works">
+                <li class="my-portfolio__work" data-filter="pug,scss,jQuery,gulp">
                     <div class="my-portfolio__work-visible">
                         <img src="images/miami366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -378,7 +366,7 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="scss,jQuery,gulp">
                     <div class="my-portfolio__work-visible">
                         <img src="images/driving366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -393,7 +381,7 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="scss,jQuery,gulp,slick-carousel">
                     <div class="my-portfolio__work-visible">
                         <img src="images/volki366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -408,7 +396,7 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="pug,scss,jQuery, vanilla-text-mask, jquery.maskedinput, jquery-validation, vex-js, toastr.js">
                     <div class="my-portfolio__work-visible">
                         <img src="images/wezom366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -426,7 +414,7 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="pug,scss,jQuery,vanilla-text-mask,jquery.maskedinput,jquery-validation,vex-js,gulp">
                     <div class="my-portfolio__work-visible">
                         <img src="images/ayudag366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -443,7 +431,7 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="pug, scss, jQuery,vanilla-text-mask,jquery.maskedinput,jquery-validation,vex-js,gulp">
                     <div class="my-portfolio__work-visible">
                         <img src="images/strat366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -456,11 +444,11 @@
                             <a href="https://github.com/leonziger/stratg" target="_blank">код на гитхабе</a>
                         </p>
                         <p><span class="strong">Кодинг/разметка:</span> HTML(pug)+SCSS.</p>
-                        <p><span class="strong">Плагины/библиотеки:</span> jQuery, vanilla-text-mask.</p>
+                        <p><span class="strong">Плагины/библиотеки:</span> jQuery, vanilla-text-mask, jquery.maskedinput, jquery-validation, vex-js.</p>
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="pug,scss,jQuery,slick-carousel,gulp">
                     <div class="my-portfolio__work-visible">
                         <img src="images/shakers366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -477,7 +465,7 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="pug,scss,jQuery,vanilla-text-mask,gulp">
                     <div class="my-portfolio__work-visible">
                         <img src="images/suntour366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -494,7 +482,7 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="handlebars,scss,jQuery,  vanilla-text-mask, jquery.maskedinput, jquery-validation, FlipClock, vex-js,gulp">
                     <div class="my-portfolio__work-visible">
                         <img src="images/buyheater366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -511,7 +499,7 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="handlebars,scss,jQuery,vanilla-text-mask, jquery.maskedinput, jquery-validation, jQueryFormStyler, slick-carousel, vex-js,gulp">
                     <div class="my-portfolio__work-visible">
                         <img src="images/folio366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -528,7 +516,7 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work webpack">
+                <li class="my-portfolio__work" data-filter="handlebars,scss,jQuery, Vue.js, Bootstrap3, webpack">
                     <div class="my-portfolio__work-visible">
                         <img src="images/invite366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -545,7 +533,7 @@
                         <p><span class="strong">Сборка проекта:</span> webpack.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work webpack">
+                <li class="my-portfolio__work" data-filter="handlebars,scss,jQuery, slick-carousel, webpack">
                     <div class="my-portfolio__work-visible">
                         <img src="images/clubc366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -562,7 +550,7 @@
                         <p><span class="strong">Сборка проекта:</span> webpack.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="handlebars,scss,jQuery, Bootstrap3, fullPage.js, webpack">
                     <div class="my-portfolio__work-visible">
                         <img src="images/closes366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -579,7 +567,7 @@
                         <p><span class="strong">Сборка проекта:</span> webpack.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="handlebars,scss,jQuery, Bootstrap3, jquery.maskedinput, jquery-validation, vex-js, gulp">
                     <div class="my-portfolio__work-visible">
                         <img src="images/belaz366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -596,7 +584,7 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="handlebars,scss,jQuery, Bootstrap4, jquery.maskedinput, jquery-validation, gulp">
                     <div class="my-portfolio__work-visible">
                         <img src="images/rest366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -613,7 +601,7 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="handlebars,scss,noUiSlider, gulp">
                     <div class="my-portfolio__work-visible">
                         <img src="images/myresume366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -630,7 +618,7 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="nunjucks,scss,jQuery, slick-carousel, gulp, Wordpress, ACF">
                     <div class="my-portfolio__work-visible">
                         <img src="images/rizorhover366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -643,9 +631,9 @@
                             <a href="https://github.com/leonziger/rizor-hover" target="_blank">код на гитхабе</a>
                         </p>
                         <p><span class="strong">Кодинг/разметка:</span> HTML(nunjucks)+SCSS.</p>
-                        <p><span class="strong">Плагины/библиотеки:</span> slick, jQuery.</p>
+                        <p><span class="strong">Плагины/библиотеки:</span> slick-carousel, jQuery.</p>
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
-                        <p><span class="strong">Cms, плагины:</span> Wordpress, Advanced custom fields.</p>
+                        <p><span class="strong">Cms, плагины:</span> Wordpress, ACF.</p>
                     </div>
                 </li>
             </ul>
