--- a/index.html
+++ b/index.html
@@ -842,7 +842,16 @@
             </div>
         </div>
     </div>
-</footer><div class="scroll-up">
+</footer><script type="text/html" data-modal="thanks">
+    <div class="modal" id="modal-thanks">
+        <div class="thanks">
+            <div class="thanks__content">
+                <div class="thanks__title"></div>
+                <div class="thanks__description">Мы свяжемся с Вами в ближайшее время для уточнения деталей.</div>
+            </div>
+        </div>
+    </div>
+</script><div class="scroll-up">
     <div class="scroll-up__text">up</div>
 </div>
 </body>
