--- a/index.html
+++ b/index.html
@@ -773,6 +773,31 @@
                                 <p><span class="strong">Cms, плагины:</span> Wordpress, ACF</p>
                         </div>
                     </li>
+                    <li class="my-portfolio__work" data-filter="handlebars,SCSS,jQuery,Bootstrap3,Wordpress, Woocommerce, MetaSlider">
+                        <div class="my-portfolio__work-visible">
+                            <img src="./images/dishesshop366x300.png" alt="" class="my-portfolio__work-img">
+                        </div>
+                        <div class="my-portfolio__work-hidden">
+                            <p class="my-portfolio__work-title">Магазин посуды</p>
+                            <p class="my-portfolio__work-link">
+                                <a href="http://sitesdepot.ru/wp-dishes-shop/" target="_blank">веб-ресурс</a>
+                            </p>
+                                <p class="my-portfolio__work-link">
+                                    <a href="https://github.com/leonziger/dishes-shop" target="_blank">код на github</a>
+                                </p>
+
+                            <p><span class="strong">Кодинг/разметка:</span>
+                                    handlebars, 
+                                    SCSS
+                            </p>
+                            <p><span class="strong">Плагины/библиотеки:</span>
+                                    jQuery, 
+                                    Bootstrap3
+                            </p>
+                            <p><span class="strong">Сборка проекта:</span> Gulp</p>
+                                <p><span class="strong">Cms, плагины:</span> Wordpress, Woocommerce, MetaSlider</p>
+                        </div>
+                    </li>
             </ul>
         </div>
     </div>
