--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="main-header__logo-wrap">
                 <div class="main-header__logo-slogan main-header__logo-slogan_left"><span class="green">мое порт</span></div>
                 <a href="#home" class="main-header__logo">
-                    <img class="main-header__logo-icon" src="images/logo-icon.png">
+                    <img class="main-header__logo-icon" src="./images/logo-icon.png">
                 </a>
                 <div class="main-header__logo-slogan"><span class="green">olio</span></div>
                 <h1 class="main-header__site-headline">Портфолио веб-разработчика Леонида Зычкова: верстка, натяжка на Вордпресс, разработка js/jQuery скриптов</h1>
@@ -111,28 +111,28 @@
             </div>
             <ul class="about-me__vantages">
                 <li class="about-me__vantage">
-                    <img src="images/me1.png" alt="" class="about-me__vantage-icon">
+                    <img src="./images/me1.png" alt="" class="about-me__vantage-icon">
                     <div class="about-me__vantage-text">
                         <div class="about-me__vantage-title">HTML+CSS</div>
                         <div class="about-me__vantage-description">Верстаю адаптивно, семантично, кроссбраузерно, Pixel perfect.</div>
                     </div>
                 </li>
                 <li class="about-me__vantage">
-                    <img src="images/me2.png" alt="" class="about-me__vantage-icon">
+                    <img src="./images/me2.png" alt="" class="about-me__vantage-icon">
                     <div class="about-me__vantage-text">
                         <div class="about-me__vantage-title">js/Jquery</div>
                         <div class="about-me__vantage-description">Интегрирую на сайт популярные плагины или пишу несложные скрипты.</div>
                     </div>
                 </li>
                 <li class="about-me__vantage">
-                    <img src="images/me3.png" alt="" class="about-me__vantage-icon">
+                    <img src="./images/me3.png" alt="" class="about-me__vantage-icon">
                     <div class="about-me__vantage-text">
                         <div class="about-me__vantage-title">PHP</div>
                         <div class="about-me__vantage-description">Знаю php на уровне, чтобы натянуть верстку на сайт на cms Wordpress.</div>
                     </div>
                 </li>
                 <li class="about-me__vantage">
-                    <img src="images/me4.png" alt="" class="about-me__vantage-icon">
+                    <img src="./images/me4.png" alt="" class="about-me__vantage-icon">
                     <div class="about-me__vantage-text">
                         <div class="about-me__vantage-title">Wordpress</div>
                         <div class="about-me__vantage-description">Превращаю html-верстку в Wordpress-тему. Вношу данные через плагин ACF.</div>
